WebSocket working but without WebSocketContext

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,10 @@
 {
-  "extends": "next/core-web-vitals"
+  "extends": ["next/core-web-vitals"],
+  "rules": {
+    "quotes": ["error", "single"],
+    "indent": ["error", 2],
+    "semi": ["error", "never"],
+    "eqeqeq": "error",
+    "react-hooks/exhaustive-deps": "off"
+  }
 }
