--- a/package.json
+++ b/package.json
@@ -9,17 +9,23 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "jose": "^5.2.4",
+    "jsonwebtoken": "^9.0.2",
+    "mysql2": "^3.9.5",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18"
   },
   "devDependencies": {
     "@next/eslint-plugin-next": "^14.1.3",
-    "@types/node": "^20",
+    "@types/bcrypt": "^5.0.2",
+    "@types/jsonwebtoken": "^9.0.6",
+    "@types/node": "^20.12.7",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/ssh2": "^1.15.0",
     "autoprefixer": "^10.0.1",
+    "bcrypt": "^5.1.1",
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
     "postcss": "^8",
