--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "jose": "^5.2.4",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.9.5",
-    "next": "14.1.0",
+    "next": "^14.2.3",
     "react": "^18",
     "react-dom": "^18"
   },
