--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "mysql2": "^3.9.5",
     "next": "^14.2.3",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "sharp": "^0.33.4"
   },
   "devDependencies": {
     "@next/eslint-plugin-next": "^14.1.3",
