--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest"
   },
   "dependencies": {
     "jose": "^5.2.4",
@@ -15,11 +16,16 @@
     "next": "^14.2.3",
     "react": "^18",
     "react-dom": "^18",
-    "sharp": "^0.33.4"
+    "sharp": "^0.33.4",
+    "ts-node": "^10.9.2"
   },
   "devDependencies": {
     "@next/eslint-plugin-next": "^14.1.3",
+    "@testing-library/jest-dom": "^6.4.5",
+    "@testing-library/react": "^16.0.0",
+    "@testing-library/user-event": "^14.5.2",
     "@types/bcrypt": "^5.0.2",
+    "@types/jest": "^29.5.12",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20.12.7",
     "@types/react": "^18",
@@ -27,12 +33,16 @@
     "@types/ssh2": "^1.15.0",
     "autoprefixer": "^10.0.1",
     "bcrypt": "^5.1.1",
+    "cypress": "^13.11.0",
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "postcss": "^8",
     "prettier": "^3.2.5",
     "prettier-plugin-tailwindcss": "^0.5.13",
     "tailwindcss": "^3.3.0",
+    "ts-jest": "^29.1.4",
     "typescript": "^5"
   }
 }
